feat: Extracted item serialization from CustomItem to CustomItemSerializer (Step 1 to fix SRP)