@@ -32,8 +32,6 @@ import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
 public class CustomItem {
-    private CommentedFileConfig config;
-
     private static final MiniMessage miniMessage = MiniMessage.miniMessage();
     private static final NamespacedKey ABILITIES_KEY = new NamespacedKey(CustomItems.instance, "custom_item_abilities");
 
@@ -44,7 +42,7 @@ public class CustomItem {
     @NotNull
     private Material material;
     @Nullable
-    private ConcurrentHashMap<Enchantment, Integer> enchantments;
+    private HashMap<Enchantment, Integer> enchantments;
     @Nullable
     private List<Component> lore;
     @Nullable
@@ -54,17 +52,15 @@ public class CustomItem {
     private List<AbilityDefinition> abilities;
 
     public CustomItem(
-            @NonNull CommentedFileConfig config,
             @NonNull String id,
             @Nullable Component name,
             @NonNull Material material,
-            @Nullable ConcurrentHashMap<Enchantment, Integer> enchantments,
+            @Nullable HashMap<Enchantment, Integer> enchantments,
             @Nullable List<Component> lore,
             @Nullable List<Float> cmd,
             boolean unbreakable,
             @Nullable List<AbilityDefinition> abilities
     ) {
-        this.config = config;
         this.id = id;
         this.displayName = name;
         this.material = material;
@@ -74,89 +70,6 @@ public class CustomItem {
         this.unbreakable = unbreakable;
         this.abilities = abilities;
     }
-
-    @Nullable
-    public static CustomItem from(CommentedFileConfig config) {
-        Optional<CommentedConfig> enchantmentsRaw = config.getOptional("general.enchantments");
-        ConcurrentHashMap<Enchantment, Integer> enchantments = new ConcurrentHashMap<>();
-        enchantmentsRaw.ifPresent(enchantConfig -> enchantConfig.entrySet().forEach(entry -> {
-            String enchantName = entry.getKey();
-            int level = entry.getValue();
-
-            NamespacedKey key;
-            if (enchantName.contains(":")) {
-                String firstPart = enchantName.split(":")[0];
-                String secondPart = enchantName.split(":")[1];
-                key = new NamespacedKey(firstPart, secondPart);
-            } else {
-                key = NamespacedKey.minecraft(enchantName);
-            }
-
-            Enchantment enchant = RegistryAccess.registryAccess().getRegistry(RegistryKey.ENCHANTMENT).get(key);
-            if (enchant == null) {
-                CustomItems.instance.getLogger().warning("Enchantment " + enchantName + " does not exist!");
-                return;
-            }
-            enchantments.put(enchant, level);
-        }));
-
-        Optional<List<String>> loreRaw = config.getOptional("general.lore");
-        List<Component> lore = null;
-        if (loreRaw.isPresent()) {
-            lore = loreRaw.get().stream().map(miniMessage::deserialize).toList();
-        }
-
-        String id = config.get("id");
-        if (id == null || id.isBlank()) {
-            CustomItems.instance.getLogger().warning("A custom item is missing its id.");
-            return null;
-        }
-
-        String materialRaw = config.get("general.material");
-        if (materialRaw == null || materialRaw.isBlank()) {
-            CustomItems.instance.getLogger().warning("Item " + id + " is missing general.material");
-            return null;
-        }
-
-        Material mat = Material.matchMaterial(materialRaw);
-        if (mat == null) {
-            CustomItems.instance.getLogger().warning("Item " + id + " has invalid material " + materialRaw);
-            return null;
-        }
-
-        Optional<String> displayNameRaw = config.getOptional("general.display_name");
-        Component displayName = null;
-        if (displayNameRaw.isPresent()) {
-            displayName = miniMessage.deserialize(displayNameRaw.get());
-        }
-
-        Optional<List<Float>> customModelDataRaw = config.getOptional("general.custom_model_data");
-        List<Float> customModelData = null;
-        if (customModelDataRaw.isPresent()) {
-            customModelData = customModelDataRaw.get();
-        }
-
-        Optional<Boolean> unbreakableRaw = config.getOptional("general.unbreakable");
-        boolean unbreakable = false;
-        if (unbreakableRaw.isPresent()) {
-            unbreakable = unbreakableRaw.get();
-        }
-
-        List<AbilityDefinition> abilities = parseAbilities(config);
-
-        return new CustomItem(
-                config,
-                id,
-                displayName,
-                mat,
-                enchantments,
-                lore,
-                customModelData,
-                unbreakable,
-                abilities
-        );
-    }
-
     public @NonNull String getId() {
         return id;
     }
@@ -167,12 +80,10 @@ public class CustomItem {
 
     public void rename(Component component) {
         displayName = component;
-        config.set("general.display_name", miniMessage.serialize(displayName));
     }
 
     public void setLore(List<Component> lore) {
         this.lore = lore;
-        config.set("general.lore", lore.stream().map(miniMessage::serialize).toList());
     }
 
     public List<Component> getLore() {
@@ -201,16 +112,14 @@ public class CustomItem {
 
     public void setMaterial(Material material) {
         this.material = material;
-        config.set("general.material", material.name());
     }
 
-    public ConcurrentHashMap<Enchantment, Integer> getEnchantments() {
+    public HashMap<Enchantment, Integer> getEnchantments() {
         return enchantments;
     }
 
     public void setCustomModelData(List<Float> data) {
         this.customModelData = data;
-        config.set("general.custom_model_data", data);
     }
 
     public List<Float> getCustomModelData() {
@@ -219,7 +128,6 @@ public class CustomItem {
 
     public void setUnbreakable(boolean value) {
         this.unbreakable = value;
-        config.set("general.unbreakable", value);
     }
 
     public boolean isUnbreakable() {
@@ -239,13 +147,13 @@ public class CustomItem {
     public void addEnchant(String enchant, Integer level) {
         Registry<@NotNull Enchantment> registry = RegistryAccess.registryAccess().getRegistry(RegistryKey.ENCHANTMENT);
         this.enchantments.put(Objects.requireNonNull(registry.get(NamespacedKey.minecraft(enchant))), level);
-        config.set("general.enchantments", enchantListToConfigurableList(this.enchantments));
     }
 
     public void removeEnchant(String enchant) {
-        Registry<@NotNull Enchantment> registry = RegistryAccess.registryAccess().getRegistry(RegistryKey.ENCHANTMENT);
-        this.enchantments.remove(Objects.requireNonNull(registry.get(NamespacedKey.minecraft(enchant))));
-        config.set("general.enchantments", enchantListToConfigurableList(this.enchantments));
+        if (this.enchantments != null) {
+            Registry<@NotNull Enchantment> registry = RegistryAccess.registryAccess().getRegistry(RegistryKey.ENCHANTMENT);
+            this.enchantments.remove(Objects.requireNonNull(registry.get(NamespacedKey.minecraft(enchant))));
+        }
     }
 
     public void addAbility(String type, AbilityTrigger trigger) {
@@ -274,7 +182,6 @@ public class CustomItem {
         );
 
         abilities.add(ability);
-        syncAbilitiesToConfig();
     }
 
     public void removeLastAbility() {
@@ -282,68 +189,8 @@ public class CustomItem {
             return;
         }
 
-        abilities.remove(abilities.size() - 1);
-        syncAbilitiesToConfig();
+        abilities.removeLast();
     }
-
-    private void syncAbilitiesToConfig() {
-        if (abilities == null || abilities.isEmpty()) {
-            config.remove("abilities");
-            return;
-        }
-
-        CommentedConfig abilitiesSection = CommentedConfig.inMemory();
-
-        for (AbilityDefinition ability : abilities) {
-            CommentedConfig abilityConfig = CommentedConfig.inMemory();
-            ability.data().valueMap().forEach(abilityConfig::set);
-            abilityConfig.set("type", ability.type());
-            abilityConfig.set("trigger", ability.trigger().name());
-            abilitiesSection.set(ability.id(), abilityConfig);
-        }
-
-        config.set("abilities", abilitiesSection);
-    }
-
-    public void save() {
-        config.set("id", id);
-        config.set("general.material", material.name());
-
-        if (displayName != null) {
-            config.set("general.display_name", miniMessage.serialize(displayName));
-        }
-        if (enchantments != null) {
-            config.set("general.enchantments", enchantListToConfigurableList(enchantments));
-        }
-        if (lore != null) {
-            config.set("general.lore", lore.stream().map(miniMessage::serialize).toList());
-        }
-        if (customModelData != null) {
-            config.set("general.custom_model_data", customModelData);
-        }
-        if (unbreakable) {
-            config.set("general.unbreakable", true);
-        }
-        if (abilities != null && !abilities.isEmpty()) {
-            CommentedConfig abilitiesSection = CommentedConfig.inMemory();
-
-            for (AbilityDefinition ability : abilities) {
-                CommentedConfig abilityConfig = CommentedConfig.inMemory();
-                ability.data().valueMap().forEach(abilityConfig::set);
-                abilityConfig.set("type", ability.type());
-                abilityConfig.set("trigger", ability.trigger().name());
-                abilitiesSection.set(ability.id(), abilityConfig);
-            }
-
-            config.set("abilities", abilitiesSection);
-        }
-
-        config.save();
-        File configFile = config.getFile();
-        TomlWriter writer = new TomlWriter();
-        writer.write(config, configFile, WritingMode.REPLACE);
-    }
-
     @SuppressWarnings("UnstableApiUsage")
     public ItemStack createItem() {
         ItemStack item = new ItemStack(material, 1);
